Make sure that the collapse icon stays in place even if the node label is long

--- a/styles.css
+++ b/styles.css
@@ -25,8 +25,9 @@
 .jsenabled .list-group-item[data-key="localboostnavigationactivities"][data-isexpandable="1"][data-collapse="0"] > div::after,
 .jsenabled .list-group-item[data-key^="localboostnavigationcustom"][data-isexpandable="1"][data-collapse="0"] > div::after {
     content: url([[pix:i/dropdown]]);
-    float: right;
-    padding-left: 0.2rem;
+    position: absolute;
+    top: 0.75rem;
+    right: 0.75rem;
 }
 /* Add the icon for the collapsed node state. */
 .jsenabled .list-group-item[data-key="mycourses"][data-isexpandable="1"][data-collapse="1"] > div::after,
@@ -34,8 +35,16 @@
 .jsenabled .list-group-item[data-key="localboostnavigationactivities"][data-isexpandable="1"][data-collapse="1"] > div::after,
 .jsenabled .list-group-item[data-key^="localboostnavigationcustom"][data-isexpandable="1"][data-collapse="1"] > div::after {
     content: url([[pix:t/collapsed]]);
-    float: right;
-    padding-left: 0.2rem;
+    position: absolute;
+    top: 0.75rem;
+    right: 0.75rem;
+}
+/* Make sure that the icon does not overlap with the node text. */
+.jsenabled .list-group-item[data-key="mycourses"][data-isexpandable="1"] > div,
+.jsenabled .list-group-item[data-key="localboostnavigationcoursesections"][data-isexpandable="1"] > div,
+.jsenabled .list-group-item[data-key="localboostnavigationactivities"][data-isexpandable="1"] > div,
+.jsenabled .list-group-item[data-key^="localboostnavigationcustom"][data-isexpandable="1"] > div {
+    padding-right: 1rem;
 }
 /* Set the cursor for the collapsible nodes. */
 .jsenabled .list-group-item[data-key="mycourses"][data-isexpandable="1"],
